--- a/MossTalkWords/res/values/strings.xml
+++ b/MossTalkWords/res/values/strings.xml
@@ -16,6 +16,16 @@
         <item>Hard</item>
     </string-array>
     <string-array name="nonlivingthingseasy">
+        <item >banana</item>
+        <item >box</item>
+        <item >table</item>
+        <item >chair</item>
+        <item >book</item>
+        <item >door</item>
+        <item >clock</item>
+        <item >cup</item>
+        <item >plate</item>
+        <item >hat</item>
         
     </string-array>
     <string-array name="livingthingseasy">
