--- a/MossTalkWords/res/values/strings.xml
+++ b/MossTalkWords/res/values/strings.xml
@@ -13,6 +13,7 @@
     </string-array>
     <string-array name="difficulty_array">
         <item>Easy</item>
+        <item>Medium</item>
         <item>Hard</item>
     </string-array>
     <string-array name="nonlivingthingseasy">
