--- a/MossTalkWords/res/values/strings.xml
+++ b/MossTalkWords/res/values/strings.xml
@@ -26,7 +26,7 @@
         <item >cup</item>
         <item >plate</item>
         <item >hat</item>
-        
+        <item >grapes</item>
     </string-array>
     <string-array name="livingthingseasy">
         
