updated EndSet screen to animate increment of total score.  sometimes it doesnt work, trying to figure out why...

--- a/MossTalkWords/res/values/strings.xml
+++ b/MossTalkWords/res/values/strings.xml
@@ -61,6 +61,11 @@
         <item>cinnamon</item>
         <item>radio</item>
     </string-array>
-
+    
+    <color name="yellow">#EBC06A</color>
+	<color name="green">#288C8C</color>
+    <color name="grey">#333333</color>
+    <color name="white">#FFFFFF</color>
+    
 </resources>
 
